# graph2x

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: benchmark.cpp  example1.cpp  graph_editor.cpp  hopcroft_karp_vis.cpp  mag1.cpp
include/: graph2x.hpp
include/graph2x/: core.hpp  util.hpp
include/graph2x/algo/: algo.hpp  bip_matchings.hpp  matching_reductions.hpp  matchings_3regular.hpp  misc.hpp  search.hpp
include/graph2x/graph_gen/: bipartite.hpp  graph_gen.hpp
include/graph2x/graphs/: adj_list_graph.hpp  basic_digraph.hpp  basic_graph.hpp  compact_graph.hpp  compact_static_simple_graph.hpp  dense_graph.hpp  dynamic_graph.hpp  dynamic_list_graph.hpp  graphs.hpp  nested_vec_graph.hpp  static_simple_digraph.hpp  static_simple_graph.hpp
include_lab/graph2x_lab/: graph2x_lab.hpp
tests/: CMakeLists.txt  basic_graph.cpp  dense_graph.cpp  dynamic_graph.cpp  edges.cpp  graph_generators.cpp  graph_types.cpp  hopcroft_karp_vis.cpp  mag1.cpp  matching_reductions.cpp  nested_vec_graph.cpp  tests_common.hpp  tests_pch.hpp
thesis-tests/: common.hpp  g2x_perf.cpp  hk73_edge_strategies.cpp  hopcroft_karp.cpp  mag1.cpp  reductions.cpp
